--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
-    "plugins": ["@react-native-google-signin/google-signin"],
+    "scheme": "tempconverter",
+    "platforms": ["android"],
     "name": "temp-converter",
     "slug": "temp-converter",
     "version": "1.0.0",
@@ -17,16 +18,23 @@
       "supportsTablet": true
     },
     "android": {
-      "googleServicesFile": "./android/app/google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.yahya080.tempconverter"
+      "package": "com.yahya080.tempconverter",
+      "googleServicesFile": "./android/app/google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router",
+      "@react-native-firebase/app",
+      "@react-native-google-signin/google-signin",
+      "expo-build-properties",
+      "expo-web-browser"
+    ]
   }
 }
