--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
+    "expo-auth-session": "~6.1.5",
+    "expo-build-properties": "~0.14.6",
+    "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.8.0",
+    "expo-web-browser": "~14.1.6",
+    "firebase": "^11.8.1",
     "link": "^2.1.1",
     "react": "19.0.0",
     "react-native": "^0.79.2",
@@ -28,8 +32,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-auth-session": "~6.1.5"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
